; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_ignore_list_check.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_ignore_list_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@now = common dso_local global i64 0, align 8
@ignore_timestamp = common dso_local global i64 0, align 8
@ignore_list_check.lkey = internal global i32 0, align 4
@ignore_tree = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ignore_list_check(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* @now, align 8
  %7 = load i64, i64* @ignore_timestamp, align 8
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @combine_ltree_x(i32 %11, i32 %12, i32* @ignore_list_check.lkey)
  %14 = load i32, i32* @ignore_tree, align 4
  %15 = load i32, i32* @ignore_list_check.lkey, align 4
  %16 = call i64 @ltree_lookup(i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  %18 = zext i1 %17 to i32
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %10, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @combine_ltree_x(i32, i32, i32*) #1

declare dso_local i64 @ltree_lookup(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
